--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-builders",
-  "description": "A consolidation of community builders for Angular build facade",
+  "name": "@sifawm/angular-builders",
+  "description": "Remove this package when angular-builders merge the pull request #152. A consolidation of community builders for Angular build facade",
   "repository": {
     "type": "git",
     "url": "https://github.com/meltedspark/angular-builders"
