--- a/packages/custom-webpack/examples/append-webpack-plugins/package.json
+++ b/packages/custom-webpack/examples/append-webpack-plugins/package.json
@@ -26,8 +26,8 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^7.1.1",
-    "@angular-builders/dev-server": "^7.1.1",
+    "@sifawm/custom-webpack": "^7.1.1",
+    "@sifawm/dev-server": "^7.1.1",
     "@angular-devkit/build-angular": "~0.11.4",
     "@angular/cli": "~7.1.1",
     "@angular/compiler-cli": "^7.1.1",
