--- a/packages/timestamp/package.json
+++ b/packages/timestamp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@angular-builders/timestamp",
+  "name": "@sifawm/timestamp",
   "version": "7.1.1",
   "license": "MIT",
   "author": "Evgeny Barabanov",
