--- a/packages/jest/examples/multiple-apps/angular.json
+++ b/packages/jest/examples/multiple-apps/angular.json
@@ -65,7 +65,7 @@
           }
         },
         "test": {
-          "builder": "@angular-builders/jest:run",
+          "builder": "@sifawm/jest:run",
           "options": {}
         },
         "lint": {
@@ -174,7 +174,7 @@
           }
         },
         "test": {
-          "builder": "@angular-builders/jest:run",
+          "builder": "@sifawm/jest:run",
           "options": {}
         },
         "lint": {
@@ -240,7 +240,7 @@
           }
         },
         "test": {
-          "builder": "@angular-builders/jest:run",
+          "builder": "@sifawm/jest:run",
           "options": {}
         },
         "lint": {
