--- a/packages/jest/examples/simple-app/angular.json
+++ b/packages/jest/examples/simple-app/angular.json
@@ -65,7 +65,7 @@
           }
         },
         "test": {
-          "builder": "@angular-builders/jest:run",
+          "builder": "@sifawm/jest:run",
           "options": {}
         },
         "lint": {
