--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@angular-builders/jest",
+  "name": "@sifawm/jest",
   "version": "7.1.1",
   "description": "Jest builder for Angular build facade. Allows ng test run with Jest instead of Karma",
   "repository": {
