--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,9 @@
     "sourceMap": true,
     "declaration": true,
     "stripInternal": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true,
+    "noImplicitAny": false
   },
   "exclude": [
     "node_modules"
